# FRED

./: .gitignore  .gtignore  README.MD  test.asm
ASSEMBLER/: CMakeLists.txt  DEBUG.BAT  RELEASE.BAT
ASSEMBLER/SRC/: builder.c  builder.h  context.c  context.h  funcs.c  funcs.h  isa.c  isa.h  macro.c  macro.h  main.c  parser.c  parser.h  stream.c  stream.h
DOCS/: ASM.MD  ISA.MD  LIBRARY.MD  MACRO.MD  SPECS.MD
EMULATOR/: CLEAN.BAT  CMakeLists.txt  DEBUG.BAT  RELEASE.BAT  frag.glsl  vert.glsl
EMULATOR/SRC/: audio.c  audio.h  bus.c  bus.h  clock.c  clock.h  cpu.c  cpu.h  device.c  device.h  funcs.c  funcs.h  io.c  io.h  keyboard.c  keyboard.h  main.c  memory.c  memory.h  system.c  system.h  timer.c  timer.h  video.c  video.h
