cmake_minimum_required(VERSION 3.2)

project(FRED_ASM C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED TRUE)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /TC /W3 /MTd")

file(GLOB SOURCES SRC/*.c)

add_executable(FRED_ASM ${SOURCES})

set_target_properties(FRED_ASM PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup /SUBSYSTEM:CONSOLE /MACHINE:X64")

set_target_properties(FRED_ASM PROPERTIES OUTPUT_NAME "FRED_ASM")
